app/styles/_core.less
/* ... */
.dl-horizontal {
  &.left {
    dt {
      text-align: left;
    }
  }
  &.indent {
    margin-left: (@grid-gutter-width / 2); // 20px
  }
  dd {
    &:extend(.clearfix all); // Including this here because it's not being set even though it's in /bootstrap/less/type.less dunno why?
  }
}

.gutter-top-bottom {
  padding: @grid-gutter-width / 2 0;
  &.gutter-top-bottom-2x {
    padding: @grid-gutter-width 0;
  }
}
.gutter-top {
  padding-top: @grid-gutter-width / 2;
  &.gutter-top-2x {
    padding-top: @grid-gutter-width;
  }
}
.gutter-bottom {
  padding-bottom: @grid-gutter-width / 2;
  &.gutter-bottom-2x {
    padding-bottom: @grid-gutter-width;
  }
}

select:invalid {
    box-shadow: none;
}

.truncate {
  // Bootstrap mixin
  // Note: If truncating within a flex container then the parent needs a width
  .text-overflow();
}

.nowrap {
  white-space: nowrap;
}

.well > {
  h1, h2, h3, h4, h5 {
    &:first-child {
      margin: 5px 0 15px;
    }
  }
}

.spinner.spinner-xs { // set height & width to 12px so that FF displays correctly
  height: 12px;
  width: 12px;
}

.spinner.spinner-inverse {
  border-color: rgba(0,153,211, .25);
  border-top-color: rgba(0,153,211, .75);
}

.attention-message {
  background-color: lighten(@brand-primary, 50%);
  border: 1px solid darken(@brand-primary, 10%);
  position: absolute;
  left: 50%;
  margin-top: 100px;
  transform: translateX(-50%);
  padding: 1em 1em 2em;
  min-width: 85%;
  h1,p {
    text-align: center;
  }
  p {
    max-width: 70em;
    margin: auto;
  }
}
.learn-more-block {
  display: block;
  font-size: @font-size-small;
  font-weight: normal;
}

.learn-more-inline {
  display: inline;
  font-size: @font-size-small;
  font-weight: normal;
  margin-left: 5px;
}

.short-id {
  background-color: #f1f1f1;
  color: #666;
}

.input-number {
  width: 60px;
}

.alert {
  margin-bottom: 14px;
  margin-top: 7px;
  code {
    // alerts have a clashing background color. Inherit the background and
    // remove padding, which looks strange without the background color.
    background-color: inherit;
    padding: 0;
  }
  .close {
    margin-left: 5px;
  }
}

.action-button {
  color: @gray-light;
  cursor: pointer;
  &:hover, &:active, &:focus {
    color: #000;
  }
}

a.action-button {
  &:hover, &:active, &:focus {
    text-decoration: none;
  }
}

// Use with aria-disabled="true" and role="button"
a.disabled-link {
  color: #bbbbbb;
  cursor: not-allowed;
  opacity: 0.4;
  &:hover, &:active, &:focus {
    color: #bbbbbb;
    text-decoration: none;
  }
}

.actions-dropdown-btn {
  margin-left: 5px;
}

.actions-dropdown-kebab {
  .action-button;
  // Bigger click target for the dropdown icon, which is a narrow ellipsis
  padding: 0 10px;
  vertical-align: middle;
}

.header-actions {
  .small();
  margin-left: 5px;
}

.modal-resource-action {
  background-color: @gray-lighter;
  h1 {
    font-size: 21px;
    font-weight: 500;
    margin-bottom: 20px;
    .word-break();
  }
  p {
    font-size: @font-size-large + 1;
  }
}

// Disable numeric highlighting in YAML and Dockerfile modes because of bugs
.editor.yaml-mode .ace_constant.ace_numeric, .ace_editor.dockerfile-mode .ace_constant.ace_numeric {
  color: inherit;
}

.edit-yaml {
  h1 {
    line-height: 1.3;
  }
  .editor {
    font-family: @font-family-monospace;
    line-height: 1.5;
    width: 100%;
    min-height: 140px;
    height: 50vh;
    .ace_gutter {
      color: #8b8d8f;
    }
    @media (min-height: 550px) {
      height: 60vh;
    }
    @media (min-height: 750px) {
      height: 70vh;
    }
  }
}

.debug-pod-action {
  margin-top: 5px;
}

.modal-debug-terminal {
  .modal-header {
    padding: 0 18px 5px;
    h2 {
      margin-bottom: 5px;
    }
  }
  .modal-body {
    border-top: 1px solid #bbbbbb;
    border-bottom: 1px solid #bbbbbb;
    padding: 5px 15px 0;
    .original-cmd-msg {
      margin-bottom: 10px;
    }
    .empty-state-message {
      margin-top: 60px;
    }
    kubernetes-container-terminal {
      .text-center();
      overflow: hidden;
    }
    padding-bottom: 15px;
  }
  .modal-footer {
    padding-top: 0;
  }
}

.ace-inline {
  height: 300px;
}

.ace-inline-small {
  height: 200px;
}

#from-file .editor {
  height: 350px;
}

.edit-form {
  .with-divider {
    border-top: 1px solid rgba(0, 0, 0, 0.15);
    padding-top: 21px;
    padding-bottom: 10px;
    margin-top: 10px;
  }
  .labels {
    .form-group {
      width: 44%;
      .form-control {
        width: 100%;
      }
    }
  }
  .checkbox {
    margin: 10px 0;
  }

  .trigger-info {
    margin: 10px 0px 10px 0px;
    .trigger-url {
      display: inline-block;
      vertical-align: middle;
    }
    .trigger-actions {
      display: inline-block;
      margin-left: 5px;
      .action-icon,
      .action-icon:hover {
        color: @color-pf-black-700;
      }
    }
  }

  .section {
    padding-bottom: 5px;
  }
  @media (max-width: @screen-sm-min) {
    .trigger-url {
      max-width: 90%;
    }
    .labels {
      .form-group {
        width: 100%;
      }
    }
  }
}

.status {
  min-width: 130px;
  .status-icon {
    margin-right: 6px;
    width: 13px;
    text-align: center;
  }
}
pre.clipped {
  display: inline-block;
  margin-top: 10px;
  max-width: 100%;
  &.scroll {
    max-height: 150px;
    overflow: auto;
    width: 100%;
  }
}
/* ... */

